--- a/style.css
+++ b/style.css
@@ -3,3 +3,36 @@ body{
 
 }
 
+.loader{
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    animation: spin 1.2s
+        linear infinite;
+    color: black;
+}
+
+.loader::before,
+.loader::after{
+    content: '';
+    position: absolute;
+    border-radius: inherit;
+}
+.loader::before{
+    width: 100%;
+    height: 100%;
+    background-image: 
+        linear-gradient(0deg,#f0c 0%, #80f 100%);
+}
+
+.loader::after{
+    width: 85%;
+    height: 85%;
+}
+
+@keyframes spin{
+    to{
+        transform: rotate(360deg);
+    }
+}
+
