--- a/src/components/compDetHero.jsx/Detail.css
+++ b/src/components/compDetHero.jsx/Detail.css
@@ -1,16 +1,34 @@
 .HeroDetail{
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     width: 30%;
+    flex-wrap: wrap
 }
+.HeroDetail h1{
+    margin-top: 0px;
+}
+
 
 .img-hero img{
     width: 90%;
-
 }
 
-.abilities-desc{
-    display: flex;
+.abilities{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    list-style: none;
 }
+.abilities li{
+    margin: 0px;
+    padding: 0px;
+}
+.abilities-desc img{
+    width: 80%;
+}
+
+.abilities-desc h3{
+    font-size: 15px;
+    margin: 2px;
+}
+
