--- a/src/components/compDetHero.jsx/Detail.css
+++ b/src/components/compDetHero.jsx/Detail.css
@@ -5,6 +5,9 @@
     width: 30%;
     flex-wrap: wrap
 }
+.HeroDetail ul{
+    list-style: none;
+}
 .HeroDetail h1{
     margin-top: 0px;
 }
@@ -14,21 +17,22 @@
     width: 90%;
 }
 
-.abilities{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    list-style: none;
+.abilities-desc{
+    display: flex;
 }
-.abilities li{
+.abilities-desc li{
     margin: 0px;
     padding: 0px;
-}
-.abilities-desc img{
-    width: 80%;
+    width: 50%;
+
 }
 
-.abilities-desc h3{
+.abilities-desc img{
+    height: 100%;
+}
+
+.abilities-desc p{
     font-size: 15px;
-    margin: 2px;
+    margin: 20px;
 }
 
