--- a/src/pages/list-heros/HerosView.css
+++ b/src/pages/list-heros/HerosView.css
@@ -1,7 +1,9 @@
 .list-heroes{
+    margin-top: 30px;
     background: linear-gradient(to left,  rgba(6, 6, 162, 0.37), rgba(9, 100, 218, 0.792));
-    width: 70%;
+    width: 100%; /* si se agregara nuevamente la barra al costado para el detalle del heroe, el porcentaje que ocupaba era 70-30 */
     height: auto;
+    padding: 5px;
 }
 
 .list-heroes ul {
@@ -12,7 +14,6 @@
     height: auto;  
     padding: 0px;
     margin-right: 15px;
-
 }
 
 .list-heroes li {
@@ -22,16 +23,12 @@
 }
 
 
-.principal{
-    display: flex;
 
-}
 .str-view{
     background: linear-gradient(to right, rgba(202, 32, 2, 0.701), rgb(179, 104, 56));
 }
 .agi-view{
     background: linear-gradient(to right, rgba(129, 202, 2, 0.783), rgb(96, 150, 35));
-    
 }
 .int-view{
     background: linear-gradient(to right, rgba(6, 48, 74, 0.693), rgb(56, 179, 175));
