--- a/src/pages/detail/PageDetail.css
+++ b/src/pages/detail/PageDetail.css
@@ -1,33 +1,3 @@
-nav {
-    background-color: transparent;
-    overflow: hidden;
-    margin: 10px;
-    border-radius: 10px;
-}
-
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-nav li {
-    float: left;
-
-}
-
-nav li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-nav li a:hover {
-    background-color: #111;
-}
-
 .contenedor-botones {
     width: 100%;
     text-align: center;
@@ -47,15 +17,16 @@ nav li a:hover {
     padding: 12px 24px;
     font-size: 18px;
     border: 2px solid #1b1e25;
+    background: linear-gradient(to right, rgba(10, 10, 220, 0.718), pink);
+
     border-radius: 50px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.4);
     transition: all 0.3s ease;
 }
 
 .boton-sophisticado:hover {
     cursor: pointer;
-    background-color: #fff;
-    color: #1b1e25;
+    background:black;
+    color: #fff;
     border: 2px solid #1b1e25;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
 }
@@ -73,7 +44,8 @@ nav li a:hover {
     justify-content: space-evenly;
     text-align: center;
 }
-.pageDetail .detail-data h1{
+
+.pageDetail .detail-data h1 {
     margin: 0px;
     font-size: 10vh;
 }
@@ -96,7 +68,8 @@ nav li a:hover {
 .pageDetail ul li {
     margin: 5px;
 }
-.pageDetail ul li:hover{
+
+.pageDetail ul li:hover {
     scale: 1.2;
 }
 
@@ -108,7 +81,7 @@ nav li a:hover {
     height: 100%;
 }
 
-.detail-data{
+.detail-data {
     width: 50%;
     height: 100%;
     display: flex;
