--- a/style.css
+++ b/style.css
@@ -1,38 +1,99 @@
-body{
+body {
     background: linear-gradient(to right, rgba(10, 10, 220, 0.718), pink);
 
 }
 
-.loader{
+/* Estilos para el menú de navegación estilo medieval */
+nav {
+    background-color: #040f2f21;
+    padding: 10px;
+    text-align: center;
+    width: 70%;
+    margin: 0 auto; /* Centra el menú horizontalmente */
+    border-radius: 10px;
+}
+
+ul {
+    list-style: none;
+    /* Elimina los marcadores de lista */
+    padding: 0;
+    display: flex;
+    justify-content: space-between;
+    margin: 0;
+}
+
+li {
+    width: 100%;
+    height: 100%;
+}
+a {
+    text-decoration: none;
+    /* Elimina el subrayado de los enlaces */
+    color: #040400;
+    /* Color de texto dorado */
+    font-family: 'Times New Roman', serif;
+    /* Fuente estilo antiguo */
+    font-size: 18px;
+    /* Tamaño de fuente */
+    padding: 0.8em;
+    /* Relleno interno */
+    display: block;
+}
+
+a:hover {
+    background: linear-gradient(to right, rgba(10, 10, 220, 0.718), pink);
+    /* Cambia el fondo a dorado al pasar el ratón */
+    /* Cambia el color de texto al marrón al pasar el ratón */
+    /* Borde marrón al pasar el ratón */
+    border-radius: 10px;
+    /* Bordes redondeados */
+}
+
+.loader {
     width: 60px;
     height: 60px;
     border-radius: 50%;
-    animation: spin 1.2s
-        linear infinite;
+    animation: spin 1.2s linear infinite;
     color: black;
 }
 
 .loader::before,
-.loader::after{
+.loader::after {
     content: '';
     position: absolute;
     border-radius: inherit;
 }
-.loader::before{
+
+.loader::before {
     width: 100%;
     height: 100%;
-    background-image: 
-        linear-gradient(0deg,#f0c 0%, #80f 100%);
+    background-image:
+        linear-gradient(0deg, #f0c 0%, #80f 100%);
 }
 
-.loader::after{
+.loader::after {
     width: 85%;
     height: 85%;
 }
 
-@keyframes spin{
-    to{
+@keyframes spin {
+    to {
         transform: rotate(360deg);
     }
 }
 
+
+/* Agrega estas clases CSS en tu archivo de estilos */
+.fade-in {
+    opacity: 0;
+    /* Empieza con opacidad 0 para ocultar el componente */
+    animation: fadeIn 0.9s ease-in forwards;
+    /* Animación de fundido */
+}
+
+@keyframes fadeIn {
+    to {
+        opacity: 1;
+        /* Llega a una opacidad de 1 para mostrar el componente */
+    }
+}
