--- a/style.css
+++ b/style.css
@@ -1,19 +1,20 @@
 body {
-    background: linear-gradient(to right, rgba(10, 10, 220, 0.718), pink);
+    background: linear-gradient(to right, rgba(10, 10, 220, 0.821), pink);
 
 }
 
 /* Estilos para el menú de navegación estilo medieval */
-nav {
-    background-color: #040f2f21;
+#Nav nav {
+    background-color: #081a50bd;
     padding: 10px;
     text-align: center;
     width: 70%;
     margin: 0 auto; /* Centra el menú horizontalmente */
     border-radius: 10px;
+    margin-bottom: 1em;
 }
 
-ul {
+#Nav ul {
     list-style: none;
     /* Elimina los marcadores de lista */
     padding: 0;
@@ -22,11 +23,15 @@ ul {
     margin: 0;
 }
 
-li {
+#Nav li {
+
     width: 100%;
     height: 100%;
 }
-a {
+#Nav a {
+    margin: 1px;
+    border: solid 2px #3333332a;
+    border-radius: 1em;
     text-decoration: none;
     /* Elimina el subrayado de los enlaces */
     color: #040400;
@@ -40,12 +45,12 @@ a {
     display: block;
 }
 
-a:hover {
-    background: linear-gradient(to right, rgba(10, 10, 220, 0.718), pink);
+#Nav a:hover {
+    background: linear-gradient(to right, rgba(18, 18, 30, 0.718), rgba(68, 7, 17, 0.421));
+    color: whitesmoke;
     /* Cambia el fondo a dorado al pasar el ratón */
     /* Cambia el color de texto al marrón al pasar el ratón */
     /* Borde marrón al pasar el ratón */
-    border-radius: 10px;
     /* Bordes redondeados */
 }
 
