--- a/style.css
+++ b/style.css
@@ -54,6 +54,13 @@ body {
     /* Bordes redondeados */
 }
 
+.loader-cont{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
 .loader {
     width: 60px;
     height: 60px;
