--- a/src/pages/HerosView/HeroCard.css
+++ b/src/pages/HerosView/HeroCard.css
@@ -1,34 +1,24 @@
 
 .HeroCard {
     transition: 0.2s;
-    background-color: rgba(79, 43, 240, 0.545);
-    height: 90px;
-    margin-bottom:8px;
+    background-color: rgba(79, 43, 240, 0.144);
     cursor: pointer;
     display: flex;
     flex-direction: column;
-    border: 2px solid rgba(60, 17, 202, 0.326);
-    box-shadow: 0 0 25px rgba(0, 34, 255, 0.298);
+    box-shadow: 0 0 25px rgba(5, 25, 154, 0.298);
     color: rgb(19, 17, 19);
 }
 
-.HeroCard:hover{
-    scale: 1.2;
-    background:linear-gradient(35deg, brown, pink, rgb(0, 128, 0));
-    background-position: 0 0;
-    transition: 0.5s;
-    background-color: #333;
-    color: #ddd;
-    width: 100px;
-    font-size: 1.2em;
-    box-shadow: 0 0 55px rgba(232, 249, 0, 0.685);
-    border-radius: 6px
+
+.HeroCard img{
+    width: 100%;
 }
 
-
+#NameCard{
+}
 
 .HeroCard h1 {
-    font-size: 0.9rem;
+    font-size: 1em;  
     
 }
 
