--- a/src/pages/HerosView/HerosView.css
+++ b/src/pages/HerosView/HerosView.css
@@ -1,37 +1,46 @@
 .list-heroes {
-    margin-top: 30px;
-    background: linear-gradient(to left, rgba(6, 6, 162, 0.37), rgba(9, 100, 218, 0.582));
-    width: 100%;
+    margin: 0 auto;
+    width: 80%;
     /* si se agregara nuevamente la barra al costado para el detalle del heroe, el porcentaje que ocupaba era 70-30 */
     height: auto;
-    padding: 5px;
 
 
 }
 
 .list-heroes ul {
     display: grid;
-    grid-template-columns: repeat(auto-fit,
+    grid-template-columns: repeat(6,
             minmax(80px, 1fr));
     width: auto;
     height: auto;
-    padding: 0px;
+    padding: 0;
 }
+
+.list-heroes ul li:hover{
+    scale: 1.1;
+    background:linear-gradient(35deg, brown, pink, rgb(0, 128, 0));
+    transition: 0.5s;
+    background-color: #333;
+    color: #ddd;
+    box-shadow: 0 0 55px rgba(232, 249, 0, 0.685);
+    border-radius: 6px;
+}
+
 
 .list-heroes li {
     list-style: none;
-    margin: 0px;
-    padding: 0px;
 }
 
 .list-heroes .img-atrib{
-    margin: 1.4em;
     box-shadow: 0 0 10px 5px rgba(255, 255, 255, 0.7);
+    align-items: center;
+    display: flex;    
+    margin: 0 auto;
 }
 
 
 .str-view {
-    background: linear-gradient(to right, rgba(202, 32, 2, 0.701), rgba(68, 28, 3, 0.603));
+    background: linear-gradient(to right, rgba(255, 39, 1, 0.396), rgba(68, 28, 3, 0.603));
 }
 
 .agi-view {
