--- a/src/pages/PageDetail/PageDetail.css
+++ b/src/pages/PageDetail/PageDetail.css
@@ -1,25 +1,25 @@
 .contenedor-botones {
-    width: 100%;
+    width: 96%;
     text-align: center;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
 }
 
-.boton-izquierdo {
-    float: left;
+/* .boton-izquierdo {
 }
 
 .boton-derecho {
-    float: right;
 }
-
+ */
 .boton-sophisticado {
-    background-color: #1b1e25;
+    background-color: #292b2eb9;
+    width: 100%;
     color: #fff;
-    padding: 12px 24px;
+    padding: .6em .6em;
     font-size: 18px;
     border: 2px solid #1b1e25;
-    background: linear-gradient(to right, rgba(10, 10, 220, 0.718), pink);
 
-    border-radius: 50px;
     transition: all 0.3s ease;
 }
 
@@ -33,12 +33,18 @@
 
 
 .pageDetail {
+    width: 95%;
     display: flex;
-    height: 100vh;
+    background-color: #00000079;
+    color: white;
+    padding: 1em;
+    border-radius: 1em;
+    min-height: 100vh;
+    margin: 0 auto;
 }
 
 .pageDetail .picture-hero {
-    width: 55%;
+    width: 59%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -46,15 +52,18 @@
 }
 
 .pageDetail .detail-data h1 {
-    margin: 0px;
-    font-size: 10vh;
+    margin-top: .5em;
+    font-size: 5em;
 }
+
+
 
 .pageDetail .picture-hero img {
     width: 100%;
     height: 80%;
     opacity: 2;
     transition: opacity 2s;
+    aspect-ratio: auto;
 }
 
 .pageDetail ul {
@@ -87,4 +96,13 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+}
+
+.story{
+    background-color: rgba(0, 0, 0, 0.667) ;
+    padding: 1.3em;
+    border-radius: 1em;
+    color: white;
+    font-size: 1.1em;
+
 }
