--- a/style.css
+++ b/style.css
@@ -12,16 +12,17 @@ body {
 
 /* Estilos para el menú de navegación estilo medieval */
 #Nav nav {
-    background-color: #081a50bd;
+    background-image: url("./public/navimgage.png");
     padding: 8px;
     text-align: center;
     width: 70%;
     margin: 0 auto; /* Centra el menú horizontalmente */
-    border-radius: .5em;
+    border-radius: 1em;
     margin-bottom: .4em;
 }
 
 #Nav ul {
+    background-color: #00000093;
     list-style: none;
     /* Elimina los marcadores de lista */
     padding: 0;
@@ -45,7 +46,7 @@ body {
     /* Color de texto dorado */
     font-family: 'Times New Roman', serif;
     /* Fuente estilo antiguo */
-    font-size: 18px;
+    font-size: 1.5em;
     /* Tamaño de fuente */
     padding: 0.8em;
     /* Relleno interno */
@@ -69,10 +70,6 @@ body {
     margin-top: 2em;
     color: white;
 }
-
-
-
-
 
 .fade-in {
     opacity: 0;
