--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -3,7 +3,7 @@
     height: 100%;
     margin: 0;
     padding: 0;
-    background: url("../../assets/fondoHome.jpg");
+    background: url("/public/fondoHome.jpg");
     background-size: cover;
     /* Cubrir todo el contenedor */
     background-repeat: no-repeat;
