--- a/src/pages/Hi.jsx/Hi.css
+++ b/src/pages/Hi.jsx/Hi.css
@@ -3,23 +3,31 @@
     width: 95%;
 }
 
-#Hi h1{
-    opacity: 0.6;
+#Hi .txt-hi h2{
+    font-size: 2em;
+    text-align: center;
+    color:white;
+    background-color: rgba(0, 0, 0, 0.637);
+    padding: .3em;
+    padding-top: .5em;
+
+    
 }
 
-#Hi p {
+#Hi .txt-hi p {
     background-color: rgba(0, 0, 0, 0.637);
     color: rgb(235, 227, 227);
-    padding: 1em;
+    padding: .6em;
     font-size: 2em;
-
+    padding-bottom: 1.5em;
+    margin-bottom: .1em;
 }
 
 #desc-game {
     width: 50%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
 }
 
@@ -42,7 +50,7 @@
 
 }
 
-#desc-game #txt-hi {
+#desc-game .txt-hi {
     width: 85%;
     margin: 0 auto;
 }
@@ -51,16 +59,16 @@
     width: 50%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
 
 }
 
 #maps img {
     aspect-ratio: auto;
-    margin-top: 5.7em;
     width: 70%;
     transition: .5s;
-
+    margin: 0 auto;
+    margin-top: 2.5em;
 
 }
 
@@ -68,14 +76,15 @@
     box-shadow: 0 0em 1em 1em rgba(255, 255, 255, 0.23);
     /* Definición del brillo */
     transition: .5s;
-    scale: 1.2;
+    scale: 1.1;
     cursor: pointer;
 
 
 }
 
 #ul-hi {
-    background-color: rgba(0, 0, 0, 0.637);
+    padding: 2em;
+    background-color: rgba(0, 0, 0, 0.853);
     color: rgb(235, 227, 227);
 
 
@@ -83,7 +92,7 @@
 
 #ul-hi li {
     padding: .3em;
-    font-size: 1.3em;
+    font-size: 1.4em;
 }
 
 #Heroe-hi {
