--- a/src/pages/PageDetail/PageDetail.css
+++ b/src/pages/PageDetail/PageDetail.css
@@ -1,37 +1,3 @@
-.contenedor-botones {
-    width: 96%;
-    text-align: center;
-    display: flex;
-    justify-content: space-between;
-    margin: 0 auto;
-}
-
-/* .boton-izquierdo {
-}
-
-.boton-derecho {
-}
- */
-.boton-sophisticado {
-    background-color: #292b2eb9;
-    width: 100%;
-    color: #fff;
-    padding: .6em .6em;
-    font-size: 18px;
-    border: 2px solid #1b1e25;
-
-    transition: all 0.3s ease;
-}
-
-.boton-sophisticado:hover {
-    cursor: pointer;
-    background:black;
-    color: #fff;
-    border: 2px solid #1b1e25;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
-}
-
-
 .pageDetail {
     width: 95%;
     display: flex;
@@ -39,34 +5,33 @@
     color: white;
     padding: 1em;
     border-radius: 1em;
-    min-height: 100vh;
+    min-height: 85vh;
     margin: 0 auto;
 }
 
 .pageDetail .picture-hero {
-    width: 59%;
+    width: 50%;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
     text-align: center;
 }
 
-.pageDetail .detail-data h1 {
-    margin-top: .5em;
-    font-size: 5em;
-}
-
-
 
 .pageDetail .picture-hero img {
-    width: 100%;
+    width: 90%;
     height: 80%;
     opacity: 2;
     transition: opacity 2s;
     aspect-ratio: auto;
 }
 
-.pageDetail ul {
+.pageDetail .picture-hero video {
+    width: 90%;
+    margin: 0 auto;
+}
+
+.pageDetail .list-abilities ul {
     display: grid;
     grid-template-columns: repeat(4,
             minmax(70px, 1fr));
@@ -91,18 +56,44 @@
 }
 
 .detail-data {
-    width: 50%;
-    height: 100%;
+    width: 40%;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
-.story{
-    background-color: rgba(0, 0, 0, 0.667) ;
+.story {
+    background-color: rgba(0, 0, 0, 0.667);
     padding: 1.3em;
     border-radius: 1em;
     color: white;
     font-size: 1.1em;
 
+}
+
+.contenedor-botones {
+    width: 95%;
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+}
+
+.boton-sophisticado {
+    background-color: #292b2eb9;
+    width: 100%;
+    color: #fff;
+    padding: .6em .6em;
+    font-size: 18px;
+    border: 2px solid #1b1e25;
+    border-radius: 1em;
+    transition: all 0.3s ease;
+}
+
+.boton-sophisticado:hover {
+    cursor: pointer;
+    background: black;
+    color: #fff;
+    border: 2px solid #1b1e25;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
 }
