--- a/src/pages/HerosView/HeroCard.css
+++ b/src/pages/HerosView/HeroCard.css
@@ -17,8 +17,8 @@
 
 
 .HeroCard h1 {
-    font-size: 1.2em;  
-    margin-left: .3em;
+    /* font-size: 1.2em;   */
+    /* margin-left: .3em; */
     
 }
 
