--- a/style.css
+++ b/style.css
@@ -6,26 +6,21 @@ body {
     background-image: url("/fondonuevo2.png");
     background-repeat: no-repeat; /* Evita que la imagen se repita */
     background-size: cover; /* Hace que la imagen cubra todo el espacio disponible */
+    background-attachment: fixed;
     aspect-ratio: auto;
     margin: 0;
     padding: 0;
     font-family: "Roboto", sans-serif;
-
-
 }
 
 /* Estilos para el menú de navegación estilo medieval */
-#Nav nav {
+.Nav nav {
     background-image: url("./public/navimgage.png");
-    padding: 2px;
     text-align: center;
-    width: 70%;
-    margin: 0 auto; /* Centra el menú horizontalmente */
-    border-radius: 1em;
     margin-bottom: .4em;
 }
 
-#Nav ul {
+.Nav ul {
     background-color: #00000093;
     list-style: none;
     /* Elimina los marcadores de lista */
@@ -35,12 +30,12 @@ body {
     margin: 0;
 }
 
-#Nav li {
+.Nav li {
 
     width: 100%;
     height: 100%;
 }
-#Nav a {
+.Nav a {
     margin: 1px;
     border: solid 2px #3333332a;
     border-radius: 1em;
@@ -50,14 +45,14 @@ body {
     /* Color de texto dorado */
     font-family: 'Times New Roman', serif;
     /* Fuente estilo antiguo */
-    font-size: 1.5em;
+    /* font-size: 1.5em; */
     /* Tamaño de fuente */
     padding: 0.8em;
     /* Relleno interno */
     display: block;
 }
 
-#Nav a:hover {
+.Nav a:hover {
     background: linear-gradient(to right, rgba(18, 18, 30, 0.718), rgba(68, 7, 17, 0.421));
     color: whitesmoke;
     /* Cambia el fondo a dorado al pasar el ratón */
