--- a/src/pages/HerosView/HeroCard.css
+++ b/src/pages/HerosView/HeroCard.css
@@ -3,22 +3,68 @@
     transition: 0.2s;
     background-color: rgba(79, 43, 240, 0.144);
     cursor: pointer;
-    display: flex;
-    flex-direction: column;
     box-shadow: 0 0 25px rgba(5, 25, 154, 0.298);
-    color: rgb(19, 17, 19);
 }
 
 
-.HeroCard img{
+.card-hero {
+    background: rgba(200, 203, 203, 0.986);
+    transition: all 0.2s;
+    box-shadow: 0px 0px 10px 5px  rgba(0, 0, 0, 0.705);
+    font-weight: 900;
+    border: 1px solid transparent;
+  }
+  
+  .card-hero:hover {
+    cursor: pointer;
+    transform: scale(1.5);
+    box-shadow: 0px 0px 10px 5px  rgba(0, 0, 0, 0.705);
+    background: rgb(211, 213, 219);
+    border: 1px solid gold;
+  }
+  
+  .first-content {
+    height: 100%;
     width: 100%;
-}
+    transition: all 0.4s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 1;
+  }
+  
+  .card-hero:hover .first-content {
+    height: 0px;
+    opacity: 0;
+  }
+  
+  .second-content {
+    width: 100%;
+    height: 30%;
+    opacity: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.4s;
+    font-size: 0px;
 
-
-
-.HeroCard h1 {
-    /* font-size: 1.2em;   */
-    /* margin-left: .3em; */
+    transform: rotate(90deg) scale(-1);
+    background: rgba(0, 0, 0, 0.68);
     
-}
-
+  }
+  
+  .card-hero:hover .second-content {
+    opacity: 1;
+    transform: rotate(0deg);
+  }
+  
+  @media (max-width: 640px) {
+    .card-hero:hover {
+      width: 90px;
+      cursor: pointer;
+      transform: scale(1.1);
+      box-shadow: 0px 0px 10px 5px  rgba(0, 0, 0, 0.705);
+      background: rgb(211, 213, 219);
+    }
+  }
+  
