--- a/src/pages/HerosView/HerosView.css
+++ b/src/pages/HerosView/HerosView.css
@@ -1,58 +1,45 @@
 .list-heroes {
     margin: 0 auto;
-    /* width: 80%; */
     /* si se agregara nuevamente la barra al costado para el detalle del heroe, el porcentaje que ocupaba era 70-30 */
     height: auto;
-
-
 }
 
 .list-heroes ul {
     display: grid;
 /*     grid-template-columns: repeat(6,
             minmax(80px, 1fr)); */
-    width: auto;
     height: auto;
-    padding: 0;
-    margin: .9em;
 }
 
 .list-heroes ul li:hover{
     scale: 1.1;
-    background:linear-gradient(35deg, brown, pink, rgb(0, 128, 0));
-    transition: 0.5s;
-    background-color: #333;
+    background:black;
+    transition: 0.2s;
     color: #ffffff;
     box-shadow: 0 0 55px rgba(232, 249, 0, 0.685);
-    border-radius: 6px;
 }
 
 .list-heroes li {
     list-style: none;
+
 }
 
-.list-heroes .img-atrib{
-    box-shadow: 0 0 10px 5px rgba(255, 255, 255, 0.7);
-    align-items: center;
-    display: flex;    
-    margin: 0 auto;
-    cursor: pointer;
-}
+
 
 
 .str-view {
-    background: linear-gradient(to right, rgba(255, 39, 1, 0.396), rgba(68, 28, 3, 0.603));
+    /* background: linear-gradient(to right, rgba(255, 39, 1, 0.396), rgba(68, 28, 3, 0.603)); */
 }
 
 .agi-view {
-    background: linear-gradient(to right, rgba(129, 202, 2, 0.783), rgba(96, 150, 35, 0.397));
+    /* background: linear-gradient(to right, rgba(129, 202, 2, 0.783), rgba(96, 150, 35, 0.397)); */
 }
 
 .int-view {
-    background: linear-gradient(to right, rgba(6, 48, 74, 0.693), rgba(56, 179, 175, 0.527));
+    /* background: linear-gradient(to right, rgba(6, 48, 74, 0.693), rgba(56, 179, 175, 0.527)); */
 }
 
 .uni-view {
-    background: linear-gradient(to right, rgba(68, 6, 74, 0.693), rgba(156, 2, 66, 0.575));
+    /* background: linear-gradient(to right, rgba(68, 6, 74, 0.693), rgba(156, 2, 66, 0.575)); */
 
 }
