--- a/style.css
+++ b/style.css
@@ -3,11 +3,12 @@
 @tailwind utilities;
 
 body {
-    background-image: url("/fondonuevo2.png");
-    background-repeat: no-repeat; /* Evita que la imagen se repita */
-    background-size: cover; /* Hace que la imagen cubra todo el espacio disponible */
+    background: rgb(3,43,12);
+    background: linear-gradient(90deg, rgba(3,43,12,1) 0%, rgba(23,42,3,1) 35%, rgba(18,33,1,1) 100%);/*     background-image: url("/fondonuevo2.png");
+    background-repeat: no-repeat;
+    background-size: cover; 
     background-attachment: fixed;
-    aspect-ratio: auto;
+ */    aspect-ratio: auto;
     margin: 0;
     padding: 0;
     font-family: "Roboto", sans-serif;
