--- a/style.css
+++ b/style.css
@@ -63,28 +63,38 @@ body {
 }
 .Nav a {
     margin: 1px;
+    font-size: 1.1em;
     border: solid 2px #3333332a;
-    border-radius: 1em;
     text-decoration: none;
-    /* Elimina el subrayado de los enlaces */
     color: #eeeeee;
-    /* Color de texto dorado */
     font-family: 'Times New Roman', serif;
-    /* Fuente estilo antiguo */
-    /* font-size: 1.5em; */
-    /* Tamaño de fuente */
-    padding: 0.8em;
-    /* Relleno interno */
+    padding: 0.5em;
     display: block;
 }
 
 .Nav a:hover {
     background: linear-gradient(to right, rgba(18, 18, 30, 0.718), rgba(68, 7, 17, 0.421));
     color: whitesmoke;
-    /* Cambia el fondo a dorado al pasar el ratón */
-    /* Cambia el color de texto al marrón al pasar el ratón */
-    /* Borde marrón al pasar el ratón */
-    /* Bordes redondeados */
+    border: solid 2px gold;
+}
+.glow {
+  color: #fff; /* Color del texto */
+  text-shadow: 0 0 10px #fff, 0 0 20px green, 0 0 30px green, 0 0 40px green;
+}
+
+.glow-animated {
+  color: #fff;
+  text-shadow: 0 0 5px #fff, 0 0 10px green, 0 0 15px green, 0 0 20px green;
+  animation: glow 1.5s infinite alternate;
+}
+
+@keyframes glow {
+  0% {
+    text-shadow: 0 0 5px #fff, 0 0 10px green, 0 0 15px green, 0 0 20px green;
+  }
+  100% {
+    text-shadow: 0 0 20px #fff, 0 0 30px green, 0 0 40px green, 0 0 50px green;
+  }
 }
 
 .loader-cont{
